--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "next": "13.5.4",
     "openai": "^4.12.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pdf": "^7.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
